syntax = "proto3";

package zksync.config.snapshot_recovery;

message Tree {
  optional uint64 chunk_size = 1;
  optional uint64 parallel_persistence_buffer = 2;
}

message Postgres {
  optional uint64 max_concurrency = 1;
}

message SnapshotRecovery {
  optional bool enabled = 1;
  optional Postgres postgres = 2;
  optional Tree tree = 3;
  optional uint32 l1_batch = 4;
}
